--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,28 @@
-HELP.md
+# =========================
+# Spring Boot / Java
+# =========================
+*.class
+*.jar
+*.war
+*.log
+*.tmp
+
+# Maven / Gradle
 target/
+build/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+!**/src/main/**/build/
+!**/src/test/**/build/
 
-### STS ###
+# Spring Boot / Sensitive
+application.properties
+application.yml
+
+# =========================
+# Eclipse / STS
+# =========================
 .apt_generated
 .classpath
 .factorypath
@@ -13,21 +31,30 @@ target/
 .springBeans
 .sts4-cache
 
-### IntelliJ IDEA ###
+# =========================
+# IntelliJ IDEA
+# =========================
 .idea
 *.iws
 *.iml
 *.ipr
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+# =========================
+# NetBeans
+# nbproject/private/
+# /nbbuild/
+# /dist/
+# /nbdist/
+# /.nb-gradle/
+# build/ (already included above)
 
-### VS Code ###
+# =========================
+# VS Code
+# =========================
 .vscode/
+
+# =========================
+# OS / System files
+# =========================
+.DS_Store
+Thumbs.db
